...
      </Box>

      <Box style={styles.footer} gap={18}>
        <PrimaryCTA
          onPress={() => navigation.navigate(ROUTES.IntroListenScreen)}
          color="#FF6B6B"
          testID="getStartedButton"
        >
          Get started
        </PrimaryCTA>
        <Pressable
          haptic
          onPress={() => navigation.navigate(ROUTES.LoginScreen)}
...
